Minor colour change

--- a/adm/style/admin_forms.css
+++ b/adm/style/admin_forms.css
@@ -412,6 +412,6 @@ Version
 	-webkit-border-radius: 0px 4px 4px 0px;
 	-moz-border-radius: 0px 4px 4px 0px;
 	border-radius: 0px 4px 4px 0px;
-	background-color:#EB3B00;
+	background-color:#CC7A00;
 	float: right;
 }
