--- a/adm/style/admin_forms.css
+++ b/adm/style/admin_forms.css
@@ -129,58 +129,67 @@ input[type=radio]:checked + label[class=unset] {
 Checkbox
 ---------- */
 .checkbox {
-    display:inline-block;
-    position:relative;
-    text-align:left;
-    width:50px;
-    height:20px;
+    display: inline-block;
+    position: relative;
+    text-align: left;
+    width: 50px;
+    height: 20px;
     background-color: #C9C9C9;
-    overflow:hidden;
-    border-radius:20px;
+    overflow: hidden;
+    border-radius: 20px;
+}
+
+.rtl .checkbox {
+	text-align: right;
 }
 
 .checkbox input {
-    display:block;
-    position:absolute;
-    top:0;
-    right:0;
-    bottom:0;
-    left:0;
-    width:100%;
-    height:auto;
-    margin:0 0;
-    cursor:pointer;
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+    margin: 0 0;
+    cursor: pointer;
     opacity:0;
-    z-index:2;
+    z-index: 2;
 }
 
 .checkbox label {
-    background-color:#FF3D3D;
-    background-image:linear-gradient(-40deg,rgba(0,0,0,0),rgba(255,255,255,0.1),rgba(0,0,0,0.2));
-    box-shadow:0 0 0 1px rgba(0,0,0,0.1),0 1px 2px rgba(0,0,0,0.7);
-    border-radius:20px;
-    display:inline-block;
-    width:20px;
-    text-align:center;
-    font:bold 13px/normal Arial, Sans-Serif;
-    color:#FFFFFF;
-    text-shadow:0 -1px 0 rgba(0,0,0,0.7);
-    transition:margin-left 0.2s ease-in-out;
-    margin:1px;
+    background-color: #FF3D3D;
+    background-image: linear-gradient(-40deg,rgba(0,0,0,0),rgba(255,255,255,0.1),rgba(0,0,0,0.2));
+    box-shadow: 0 0 0 1px rgba(0,0,0,0.1),0 1px 2px rgba(0,0,0,0.7);
+    border-radius: 20px;
+    display: inline-block;
+    width: 20px;
+    text-align: center;
+    font: bold 13px/normal Arial, Sans-Serif;
+    color: #FFFFFF;
+    text-shadow: 0 -1px 0 rgba(0,0,0,0.7);
+    transition: margin-left 0.2s ease-in-out;
+    margin: 1px;
 }
 
 .checkbox label:before {
-    content:attr(data-off);
+    content: attr(data-off);
 }
 
 .checkbox input:checked + label {
-    margin-left:28px;
+    margin-left: 28px;
     background-color: #429F21;
-    color:#FFFFFF;
+    color: #FFFFFF;
+}
+
+.rtl .checkbox input:checked + label {
+	margin-left: 0px;
+	margin-right: 28px;
 }
 
 .checkbox input:checked + label:before {
-    content:attr(data-on);
+    content: attr(data-on);
 }
 
 
@@ -188,7 +197,13 @@ Checkbox
 Label
 --------- */
 dd label{
-	margin-left:10px;
+	margin-left: 10px;
+}
+
+
+.rtl dd label{
+	margin-left: 0px;
+	margin-right: 10px;
 }
 
 
@@ -272,6 +287,11 @@ legend {
 	background-color: #ffffff;
 	padding: 0.5em;
 	box-shadow: 0.15em 0.2em 0em 0em #899599;
+}
+
+.rtl legend {
+	margin-left: 0em;
+	margin-right: 1em;
 }
 
 .select-buttons {
@@ -394,6 +414,7 @@ input.button2 {
 	padding: 0.2em
 }
 
+
 /* ---------
 Privacy IP list
 --------- */
@@ -405,6 +426,7 @@ Privacy IP list
 	overflow-y: auto;
 	font-size: 11px
 }
+
 
 /* ---------
 Version
