--- a/adm/style/admin_forms.css
+++ b/adm/style/admin_forms.css
@@ -250,7 +250,7 @@ Panels
 }
 
 .head-panel-error {
-	background-color: #990000;
+	background-color: #BC2A4D;
 	color: #FFFFFF;
 	text-align: center;
 }
